# cargo-forge

./: .gitignore  0.1.5_Verification_Report  CARGO_FORGE_COMPREHENSIVE_TEST_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_ACCURACY_REPORT.md  DOCUMENTATION_REPORT.md  E2E_TESTING_REPORT.md  INSTALLATION.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  TRUTH_VERIFICATION_REPORT.md  build.rs  cargo-forge-test-report.md  install.sh  release.toml
.github/workflows/: ci.yml  e2e_tests.yml  manual-publish.yml  release.yml
assets/: README.md
completions/: bash_setup.txt  fish_setup.txt  zsh_setup.txt
docs/: FAQ.md  PROJECT_TYPES.md  QUICK_REFERENCE.md  TEMPLATE_SYNTAX.md  TROUBLESHOOTING.md
scripts/: validate_generated_projects.sh
src/: cli.rs  config.rs  external_generators.rs  forge.rs  generator.rs  lib.rs  main.rs  project_types.rs
src/features/: ci.rs  database.rs  docker.rs  mod.rs
src/templates/: conditional.rs  mod.rs
templates/api_server/: Cargo.toml.tera  README.md.tera
templates/api_server/src/: main.rs.tera
templates/cli_tool/: Cargo.toml.tera  README.md.tera
templates/cli_tool/src/: main.rs.tera
templates/embedded/: Cargo.toml.tera  Embed.toml.tera  memory.x.tera
templates/embedded/.cargo/: config.toml.tera
templates/embedded/src/: main.rs.tera
templates/features/auth/: .env.auth.example.tera  jwt.rs.tera  middleware.rs.tera  mod.rs.tera  oauth.rs.tera  password.rs.tera  routes.rs.tera
templates/features/database/: .env.database.example.tera  database_config.rs.tera  db.rs.tera  migrate.rs.tera
templates/features/database/migrations/: 001_initial.sql.tera  (+1 more)
templates/features/testing/: proptest.rs.tera
templates/game_engine/: Cargo.toml.tera
templates/game_engine/assets/: README.md
templates/game_engine/src/: main.rs.tera
templates/wasm_app/: Cargo.toml.tera  README.md.tera  index.html
templates/wasm_app/src/: lib.rs.tera
templates/workspace/: Cargo.toml.tera
tests/: auth_feature_test.rs  cargo_toml_feature_test.rs  cli_test.rs.bak  conditional_template_test.rs  config_test.rs  database_feature_test.rs  e2e_comprehensive.rs  e2e_feature_integration.rs  e2e_feature_matrix.rs  e2e_systematic_validation.rs  error_cases_test.rs  feature_combinations_test.rs  feature_integration_test.rs  features_test.rs  filesystem_mock_test.rs.bak  forge_test.rs  generator_test.rs  integration.rs  project_types_test.rs  stress_test.rs  template_engine_test.rs.bak  template_test.rs.bak  tera_template_test.rs  validation_test.rs
tests/fixtures/: base.tera  sample_cargo.toml.tera  test.tera
(+13 files in other folders)
