[package]
name = "cargo-forge"
version = "0.1.1"
edition = "2021"
authors = ["The Cargo-Forge Contributors"]
description = "A powerful, interactive Rust project generator with intelligent templates and enterprise features"
readme = "README.md"
repository = "https://github.com/marcuspat/cargo-forge"
homepage = "https://cargo-forge.rs"
documentation = "https://docs.rs/cargo-forge"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "template", "generator", "scaffold", "project"]
categories = ["development-tools", "command-line-utilities", "template-engine"]
exclude = [
    ".github/",
    ".gitignore",
    "tests/",
    "target/",
    "tarpaulin-report.*",
    ".claude/",
    "CLAUDE.md",
    "claude-flow"
]

[[bin]]
name = "cargo-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
inquire = "0.7"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
anyhow = "1"
indicatif = "0.17"
colored = "2"
dirs = "5"
toml = "0.8"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cargo-release = "0.25"