[package]
name = "cargo-forge"
version = "0.1.5"
edition = "2021"
rust-version = "1.70"
authors = ["The Cargo-Forge Contributors"]
description = "An interactive Rust project generator with templates and common features"
readme = "README.md"
repository = "https://github.com/marcuspat/cargo-forge"
homepage = "https://cargo-forge.rs"
documentation = "https://docs.rs/cargo-forge"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "template", "generator", "scaffold", "project"]
categories = ["development-tools", "command-line-utilities", "template-engine"]
exclude = [
    ".github/",
    ".gitignore",
    "tests/",
    "target/",
    "tarpaulin-report.*",
    ".claude/",
    "CLAUDE.md",
    "claude-flow"
]

[[bin]]
name = "cargo-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
inquire = "0.7"
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"
anyhow = "1.0"
indicatif = "0.17"
colored = "2.0"
dirs = "5.0"
toml = "0.8"
which = "6.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
